<resources>
    <string name="app_name">UngDungToanCau</string>
    <string name="text_tieuDe">infomation form</string>
    <string name="hint_hoTen">input your name</string>
    <string name="hint_email">input your email</string>
    <string name="hint_sdt">input your phone number</string>
    <string name="text_xacNhan">confirm</string>
    <string name="text_email">Email:</string>
    <string name="text_sdt">Phone number</string>
    <string name="text_chao">"Hi: "</string>
</resources>